--- a/weather-app/public/index.html
+++ b/weather-app/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="BRANDING.png" type="image/x-icon" />
     <title>Weather App</title>
   </head>
   <body>
